Fix path in getArchitectureFileContent